// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Shortcuts Should display a shortcut directory with its files 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="TwakeTheme--light u-dc"
      >
        <div
          class="shortcuts-list-wrapper u-m-auto u-w-100"
        >
          <h6
            class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            List title
          </h6>
          <div
            class="shortcuts-list shortcuts-list--gutter u-w-100 u-mh-auto u-mv-3 u-mv-2-t u-flex-justify-center"
          >
            <span
              class="MuiBadge-root"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="makeStyles-tileWrapper-5"
                  data-testid="square-app-icon"
                >
                  <span
                    class="MuiBadge-root"
                  >
                    <span
                      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
                    >
                      <h2
                        class="MuiTypography-root makeStyles-letter-3 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                      >
                        L
                      </h2>
                      <span
                        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
                      />
                    </span>
                    <span
                      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
                    >
                      <div
                        class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
                        style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
                      >
                        <svg
                          class="styles__icon___23x3R"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <path
                            d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778v6.222zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0H9.778z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <h6
                    class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                  >
                    List item
                  </h6>
                </div>
              </a>
              <span
                class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root shortcut-actions-menu small"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="styles__icon___23x3R"
                      height="16"
                      style="transform: rotate(90deg);"
                      viewBox="0 0 16 4"
                      width="16"
                    >
                      <path
                        d="M2 0C.9 0 0 .9 0 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM8 0C6.9 0 6 .9 6 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="TwakeTheme--light u-dc"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiPopover-root-9"
      role="presentation"
      style="position: fixed; z-index: var(--zIndex-modal); right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
    >
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiPaper-root-11 MuiMenu-paper-7 MuiPopover-paper-10 MuiPaper-elevation8-22 MuiPaper-rounded-12"
        style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
        tabindex="-1"
      >
        <ul
          class="MuiList-root-40 MuiMenu-list-8 MuiList-padding-41"
          role="menu"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            class="MuiListItem-root-47 MuiButtonBase-root-55 MuiListItem-root-47 MuiMenuItem-root-44 cozyActionsItem MuiMenuItem-gutters-45 MuiListItem-gutters-52 MuiListItem-button-53 Mui-focusVisible Mui-focusVisible medium"
            role="menuitem"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root-60 cozyListItemIcon"
            >
              <svg
                class="styles__icon___23x3R"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M.889 16a.86.86 0 01-.633-.256.86.86 0 01-.256-.633v-2.155a1.755 1.755 0 01.511-1.245L11.733.511c.178-.163.374-.289.59-.378a1.836 1.836 0 011.366 0c.222.09.415.223.578.4l1.222 1.245c.178.163.307.355.389.578a1.925 1.925 0 010 1.344 1.666 1.666 0 01-.39.589l-11.2 11.2A1.755 1.755 0 013.045 16H.89zM12.978 4.267l1.244-1.245-1.244-1.244-1.245 1.244 1.245 1.245z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root-62"
            >
              <span
                class="MuiTypography-root-68 MuiListItemText-primary-66 MuiTypography-body1-70 MuiTypography-displayBlock-97"
              >
                Modify shortcut
              </span>
            </div>
            <span
              class="MuiTouchRipple-root-104"
            />
          </li>
          <li
            aria-disabled="false"
            class="MuiListItem-root-47 MuiButtonBase-root-55 MuiListItem-root-47 MuiMenuItem-root-44 cozyActionsItem MuiMenuItem-gutters-45 MuiListItem-gutters-52 MuiListItem-button-53 medium"
            role="menuitem"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root-60 cozyListItemIcon"
            >
              <svg
                class="styles__icon___23x3R"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.556 16c-.49 0-.908-.174-1.256-.522a1.712 1.712 0 01-.522-1.256V2.667h-.89V.889h4.445V0h5.334v.889h4.444v1.778h-.889v11.555c0 .49-.174.908-.522 1.256a1.712 1.712 0 01-1.256.522H3.556zm8.888-13.333H3.556v11.555h8.888V2.667zm-7.11 9.777H7.11v-8H5.333v8zm3.555 0h1.778v-8H8.889v8z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root-62"
            >
              <span
                class="MuiTypography-root-68 MuiListItemText-primary-66 MuiTypography-body1-70 MuiTypography-displayBlock-97"
              >
                Delete
              </span>
            </div>
            <span
              class="MuiTouchRipple-root-104"
            />
          </li>
        </ul>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="TwakeTheme--light u-dc"
    >
      <div
        class="shortcuts-list-wrapper u-m-auto u-w-100"
      >
        <h6
          class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          List title
        </h6>
        <div
          class="shortcuts-list shortcuts-list--gutter u-w-100 u-mh-auto u-mv-3 u-mv-2-t u-flex-justify-center"
        >
          <span
            class="MuiBadge-root"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
              href="#"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="makeStyles-tileWrapper-5"
                data-testid="square-app-icon"
              >
                <span
                  class="MuiBadge-root"
                >
                  <span
                    class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
                  >
                    <h2
                      class="MuiTypography-root makeStyles-letter-3 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                    >
                      L
                    </h2>
                    <span
                      class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
                    />
                  </span>
                  <span
                    class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
                  >
                    <div
                      class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
                      style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
                    >
                      <svg
                        class="styles__icon___23x3R"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <path
                          d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778v6.222zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0H9.778z"
                        />
                      </svg>
                    </div>
                  </span>
                </span>
                <h6
                  class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                >
                  List item
                </h6>
              </div>
            </a>
            <span
              class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root shortcut-actions-menu small"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    class="styles__icon___23x3R"
                    height="16"
                    style="transform: rotate(90deg);"
                    viewBox="0 0 16 4"
                    width="16"
                  >
                    <path
                      d="M2 0C.9 0 0 .9 0 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM8 0C6.9 0 6 .9 6 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <div
                class="TwakeTheme--light u-dc"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Shortcuts Should display multiple sections for multiple directories 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="TwakeTheme--light u-dc"
      >
        <div
          class="shortcuts-list-wrapper u-m-auto u-w-100"
        >
          <h6
            class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            a
          </h6>
          <div
            class="shortcuts-list shortcuts-list--gutter u-w-100 u-mh-auto u-mv-3 u-mv-2-t u-flex-justify-center"
          >
            <span
              class="MuiBadge-root"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="makeStyles-tileWrapper-118"
                  data-testid="square-app-icon"
                >
                  <span
                    class="MuiBadge-root"
                  >
                    <span
                      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
                    >
                      <h2
                        class="MuiTypography-root makeStyles-letter-116 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                      >
                        B
                      </h2>
                      <span
                        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
                      />
                    </span>
                    <span
                      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
                    >
                      <div
                        class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
                        style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
                      >
                        <svg
                          class="styles__icon___23x3R"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <path
                            d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778v6.222zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0H9.778z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <h6
                    class="MuiTypography-root makeStyles-name-114 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                  >
                    b
                  </h6>
                </div>
              </a>
              <span
                class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root shortcut-actions-menu small"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="styles__icon___23x3R"
                      height="16"
                      style="transform: rotate(90deg);"
                      viewBox="0 0 16 4"
                      width="16"
                    >
                      <path
                        d="M2 0C.9 0 0 .9 0 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM8 0C6.9 0 6 .9 6 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="TwakeTheme--light u-dc"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="shortcuts-list-wrapper u-m-auto u-w-100"
        >
          <h6
            class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
          >
            c
          </h6>
          <div
            class="shortcuts-list shortcuts-list--gutter u-w-100 u-mh-auto u-mv-3 u-mv-2-t u-flex-justify-center"
          >
            <span
              class="MuiBadge-root"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="makeStyles-tileWrapper-118"
                  data-testid="square-app-icon"
                >
                  <span
                    class="MuiBadge-root"
                  >
                    <span
                      class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
                    >
                      <h2
                        class="MuiTypography-root makeStyles-letter-116 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                      >
                        D
                      </h2>
                      <span
                        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
                      />
                    </span>
                    <span
                      class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
                    >
                      <div
                        class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
                        style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
                      >
                        <svg
                          class="styles__icon___23x3R"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <path
                            d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778v6.222zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0H9.778z"
                          />
                        </svg>
                      </div>
                    </span>
                  </span>
                  <h6
                    class="MuiTypography-root makeStyles-name-114 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                  >
                    d
                  </h6>
                </div>
              </a>
              <span
                class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root shortcut-actions-menu small"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="styles__icon___23x3R"
                      height="16"
                      style="transform: rotate(90deg);"
                      viewBox="0 0 16 4"
                      width="16"
                    >
                      <path
                        d="M2 0C.9 0 0 .9 0 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM8 0C6.9 0 6 .9 6 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="TwakeTheme--light u-dc"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiPopover-root-122"
      role="presentation"
      style="position: fixed; z-index: var(--zIndex-modal); right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
    >
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiPaper-root-128 MuiMenu-paper-120 MuiPopover-paper-123 MuiPaper-elevation8-139 MuiPaper-rounded-129"
        style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
        tabindex="-1"
      >
        <ul
          class="MuiList-root-157 MuiMenu-list-121 MuiList-padding-158"
          role="menu"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            class="MuiListItem-root-164 MuiButtonBase-root-172 MuiListItem-root-164 MuiMenuItem-root-161 cozyActionsItem MuiMenuItem-gutters-162 MuiListItem-gutters-169 MuiListItem-button-170 Mui-focusVisible Mui-focusVisible medium"
            role="menuitem"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root-177 cozyListItemIcon"
            >
              <svg
                class="styles__icon___23x3R"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M.889 16a.86.86 0 01-.633-.256.86.86 0 01-.256-.633v-2.155a1.755 1.755 0 01.511-1.245L11.733.511c.178-.163.374-.289.59-.378a1.836 1.836 0 011.366 0c.222.09.415.223.578.4l1.222 1.245c.178.163.307.355.389.578a1.925 1.925 0 010 1.344 1.666 1.666 0 01-.39.589l-11.2 11.2A1.755 1.755 0 013.045 16H.89zM12.978 4.267l1.244-1.245-1.244-1.244-1.245 1.244 1.245 1.245z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root-179"
            >
              <span
                class="MuiTypography-root-185 MuiListItemText-primary-183 MuiTypography-body1-187 MuiTypography-displayBlock-214"
              >
                Modify shortcut
              </span>
            </div>
            <span
              class="MuiTouchRipple-root-314"
            />
          </li>
          <li
            aria-disabled="false"
            class="MuiListItem-root-164 MuiButtonBase-root-172 MuiListItem-root-164 MuiMenuItem-root-161 cozyActionsItem MuiMenuItem-gutters-162 MuiListItem-gutters-169 MuiListItem-button-170 medium"
            role="menuitem"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root-177 cozyListItemIcon"
            >
              <svg
                class="styles__icon___23x3R"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.556 16c-.49 0-.908-.174-1.256-.522a1.712 1.712 0 01-.522-1.256V2.667h-.89V.889h4.445V0h5.334v.889h4.444v1.778h-.889v11.555c0 .49-.174.908-.522 1.256a1.712 1.712 0 01-1.256.522H3.556zm8.888-13.333H3.556v11.555h8.888V2.667zm-7.11 9.777H7.11v-8H5.333v8zm3.555 0h1.778v-8H8.889v8z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root-179"
            >
              <span
                class="MuiTypography-root-185 MuiListItemText-primary-183 MuiTypography-body1-187 MuiTypography-displayBlock-214"
              >
                Delete
              </span>
            </div>
            <span
              class="MuiTouchRipple-root-314"
            />
          </li>
        </ul>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="MuiPopover-root-126"
      role="presentation"
      style="position: fixed; z-index: var(--zIndex-modal); right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
    >
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiPaper-root-217 MuiMenu-paper-124 MuiPopover-paper-127 MuiPaper-elevation8-228 MuiPaper-rounded-218"
        style="opacity: 0; transform: scale(0.75, 0.5625); visibility: hidden;"
        tabindex="-1"
      >
        <ul
          class="MuiList-root-246 MuiMenu-list-125 MuiList-padding-247"
          role="menu"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            class="MuiListItem-root-253 MuiButtonBase-root-261 MuiListItem-root-253 MuiMenuItem-root-250 cozyActionsItem MuiMenuItem-gutters-251 MuiListItem-gutters-258 MuiListItem-button-259 Mui-focusVisible Mui-focusVisible medium"
            role="menuitem"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root-266 cozyListItemIcon"
            >
              <svg
                class="styles__icon___23x3R"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M.889 16a.86.86 0 01-.633-.256.86.86 0 01-.256-.633v-2.155a1.755 1.755 0 01.511-1.245L11.733.511c.178-.163.374-.289.59-.378a1.836 1.836 0 011.366 0c.222.09.415.223.578.4l1.222 1.245c.178.163.307.355.389.578a1.925 1.925 0 010 1.344 1.666 1.666 0 01-.39.589l-11.2 11.2A1.755 1.755 0 013.045 16H.89zM12.978 4.267l1.244-1.245-1.244-1.244-1.245 1.244 1.245 1.245z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root-268"
            >
              <span
                class="MuiTypography-root-274 MuiListItemText-primary-272 MuiTypography-body1-276 MuiTypography-displayBlock-303"
              >
                Modify shortcut
              </span>
            </div>
            <span
              class="MuiTouchRipple-root-324"
            />
          </li>
          <li
            aria-disabled="false"
            class="MuiListItem-root-253 MuiButtonBase-root-261 MuiListItem-root-253 MuiMenuItem-root-250 cozyActionsItem MuiMenuItem-gutters-251 MuiListItem-gutters-258 MuiListItem-button-259 medium"
            role="menuitem"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root-266 cozyListItemIcon"
            >
              <svg
                class="styles__icon___23x3R"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3.556 16c-.49 0-.908-.174-1.256-.522a1.712 1.712 0 01-.522-1.256V2.667h-.89V.889h4.445V0h5.334v.889h4.444v1.778h-.889v11.555c0 .49-.174.908-.522 1.256a1.712 1.712 0 01-1.256.522H3.556zm8.888-13.333H3.556v11.555h8.888V2.667zm-7.11 9.777H7.11v-8H5.333v8zm3.555 0h1.778v-8H8.889v8z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root-268"
            >
              <span
                class="MuiTypography-root-274 MuiListItemText-primary-272 MuiTypography-body1-276 MuiTypography-displayBlock-303"
              >
                Delete
              </span>
            </div>
            <span
              class="MuiTouchRipple-root-324"
            />
          </li>
        </ul>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="TwakeTheme--light u-dc"
    >
      <div
        class="shortcuts-list-wrapper u-m-auto u-w-100"
      >
        <h6
          class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          a
        </h6>
        <div
          class="shortcuts-list shortcuts-list--gutter u-w-100 u-mh-auto u-mv-3 u-mv-2-t u-flex-justify-center"
        >
          <span
            class="MuiBadge-root"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
              href="#"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="makeStyles-tileWrapper-118"
                data-testid="square-app-icon"
              >
                <span
                  class="MuiBadge-root"
                >
                  <span
                    class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
                  >
                    <h2
                      class="MuiTypography-root makeStyles-letter-116 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                    >
                      B
                    </h2>
                    <span
                      class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
                    />
                  </span>
                  <span
                    class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
                  >
                    <div
                      class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
                      style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
                    >
                      <svg
                        class="styles__icon___23x3R"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <path
                          d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778v6.222zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0H9.778z"
                        />
                      </svg>
                    </div>
                  </span>
                </span>
                <h6
                  class="MuiTypography-root makeStyles-name-114 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                >
                  b
                </h6>
              </div>
            </a>
            <span
              class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root shortcut-actions-menu small"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    class="styles__icon___23x3R"
                    height="16"
                    style="transform: rotate(90deg);"
                    viewBox="0 0 16 4"
                    width="16"
                  >
                    <path
                      d="M2 0C.9 0 0 .9 0 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM8 0C6.9 0 6 .9 6 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <div
                class="TwakeTheme--light u-dc"
              />
            </span>
          </span>
        </div>
      </div>
      <div
        class="shortcuts-list-wrapper u-m-auto u-w-100"
      >
        <h6
          class="MuiTypography-root styles__divider___SuA5q u-mv-0 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
        >
          c
        </h6>
        <div
          class="shortcuts-list shortcuts-list--gutter u-w-100 u-mh-auto u-mv-3 u-mv-2-t u-flex-justify-center"
        >
          <span
            class="MuiBadge-root"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineNone scale-hover MuiTypography-colorPrimary"
              href="#"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="makeStyles-tileWrapper-118"
                data-testid="square-app-icon"
              >
                <span
                  class="MuiBadge-root"
                >
                  <span
                    class="MuiBadge-root styles__SquareAppIcon-wrapper___3aoSx styles__SquareAppIcon-wrapper--light___AqjR- undefined"
                  >
                    <h2
                      class="MuiTypography-root makeStyles-letter-116 MuiTypography-h2 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                    >
                      D
                    </h2>
                    <span
                      class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
                    />
                  </span>
                  <span
                    class="MuiBadge-badge badgeSizeMedium badgeBorder MuiBadge-anchorOriginBottomRightRectangular"
                  >
                    <div
                      class="u-h-1-half u-miw-1-half u-bdrs-circle u-flex u-flex-items-center u-flex-justify-center"
                      style="background-color: var(--paperBackgroundColor); color: var(--iconTextColor); box-shadow: var(--shadow3);"
                    >
                      <svg
                        class="styles__icon___23x3R"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <path
                          d="M14.222 14.222H1.778V1.778H8V0H1.778C.79 0 0 .8 0 1.778v12.444C0 15.2.791 16 1.778 16h12.444C15.2 16 16 15.2 16 14.222V8h-1.778v6.222zM9.778 0v1.778h3.19l-8.737 8.738 1.253 1.253 8.738-8.738v3.191H16V0H9.778z"
                        />
                      </svg>
                    </div>
                  </span>
                </span>
                <h6
                  class="MuiTypography-root makeStyles-name-114 u-spacellipsis MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
                >
                  d
                </h6>
              </div>
            </a>
            <span
              class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangular"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root shortcut-actions-menu small"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    class="styles__icon___23x3R"
                    height="16"
                    style="transform: rotate(90deg);"
                    viewBox="0 0 16 4"
                    width="16"
                  >
                    <path
                      d="M2 0C.9 0 0 .9 0 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM8 0C6.9 0 6 .9 6 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <div
                class="TwakeTheme--light u-dc"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Shortcuts Should display nothing if nothing was found 1`] = `
<div>
  <div
    class="TwakeTheme--light u-dc"
  />
</div>
`;
